# DegasCalculator

./: CMakeLists.txt
include/: derivator.h  generator.h  integrator.h  utils.h
src/: main.cpp
src/degas/: derivator.cpp  generator.cpp  integrator.cpp  utils.cpp
